mudanças estruturais na arquitetura clean code